 for helping to debug this).
-In cloze card types, you can now provide hints, e.g. [cloze:hint] will show
 [hint] in the question as opposed to [...]
-Added Sentence card type plugin. If you put this in the 'Sentence' field:
 "La [casa:house] es [grande:big]", you'll get three sister cards with the
 following questions: "La casa es grande", "La [house] es grande",
 "La casa es [big]"
-Take size of media player widget (Linux only) into account when calculating
 the optimal split between question and answer.
-Fixed bug where card appearance settings would not be synced between different
 machines.
-Fixed issue in Activate cards, where a set without a name and a saved set
 would interfere.
-The dialog where you name saved sets is now a combobox which also list the
 current saved sets, to allow for easier updating of a saved set.
-Message boxes are now centered over the current window (card browser, ...) as
 opposed to the main window.
-Longer initial interval if the first grade you gave a card is 5.
-Fixing card merging losing information on Vocabulary card types (reported by
 Stephan Maseizik).
-Fixed spurious firing of missing media detection (reported by Geir).
-Fixed a few bugs when displaying the edit or preview windows from the card
 browser and using PgUp and PgDown to move to the previous/next card (reported
 by Chris Schmidt).
-When adding a duplicate card, rather than forbidding the user to add it, ask
 the user if he really wants to do this (requested by Laurent Humblet).
-The webserver now supports the -d option to specify the data directory
 (requested by Sirius533).
-Fixed crashes in card browser with non-latin clone names (reported by Gabriel
 Benamouzig).
-Prevent uninstalling a card type plugin if a clone of that card type has been
 created, even if it does not yet have any cards.
-Further fixes for Hebrew (reported by Eliyahu Switzer and Chris).
-Upgraded many of the libraries on which Mnemosyne depends (PyQt, numpy,
 matplotlib)